vcluster_versioned_docs/version-0.31.0/_partials/config/controlPlane/standalone/joinNode.mdx

<details className="config-field" data-expandable="true">
<summary>

## `joinNode` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode}

JoinNode holds configuration for the standalone control plane node.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#joinNode-enabled}

Enabled defines if the standalone node should be joined into the cluster. If false, only the control plane binaries will be executed and no node will show up in the actual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `preInstallCommands` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-preInstallCommands}

PreInstallCommands are commands that will be executed before containerd, kubelet etc. is installed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `preJoinCommands` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-preJoinCommands}

PreJoinCommands are commands that will be executed before kubeadm join is executed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `postJoinCommands` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-postJoinCommands}

PostJoinCommands are commands that will be executed after kubeadm join is executed.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `containerd` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd}

Containerd holds configuration for the containerd join process.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#joinNode-containerd-enabled}

Enabled defines if containerd should be installed and configured by vCluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `registry` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry}

Registry holds configuration for how containerd should be configured to use a registries.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `configPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-configPath}

ConfigPath is the path to the containerd registry config.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `mirrors` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors}

Mirrors holds configuration for the containerd registry mirrors. E.g. myregistry.io:5000 or docker.io. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `server` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-server}

Server is the fallback server to use for the containerd registry mirror. E.g. https://registry-1.docker.io. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caCert` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-caCert}

CACert are paths to CA certificates to use for the containerd registry mirror.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `skipVerify` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-skipVerify}

SkipVerify is a boolean to skip the certificate verification for the containerd registry mirror and allows http connections.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `capabilities` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-capabilities}

Capabilities is a list of capabilities to enable for the containerd registry mirror. If empty, will use pull and resolve capabilities.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `overridePath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-overridePath}

OverridePath is a boolean to override the path for the containerd registry mirror.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `hosts` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts}

Hosts holds configuration for the containerd registry mirror hosts. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `server` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts-server}

Server is the server to use for the containerd registry mirror host. E.g. http://192.168.31.250:5000.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caCert` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts-caCert}

CACert are paths to CA certificates to use for the containerd registry mirror host.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `skipVerify` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts-skipVerify}

SkipVerify is a boolean to skip the certificate verification for the containerd registry mirror and allows http connections.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `capabilities` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts-capabilities}

Capabilities is a list of capabilities to enable for the containerd registry mirror. If empty, will use pull and resolve capabilities.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `overridePath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-mirrors-hosts-overridePath}

OverridePath is a boolean to override the path for the containerd registry mirror.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `auth` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-auth}

Auth holds configuration for the containerd registry auth. See https://github.com/containerd/containerd/blob/main/docs/cri/registry.md#configure-registry-credentials for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `username` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-auth-username}

Username is the username for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `password` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-auth-password}

Password is the password for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `identityToken` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-auth-identityToken}

IdentityToken is the token for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `auth` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-registry-auth-auth}

Auth is the auth config for the containerd registry.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `pauseImage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-containerd-pauseImage}

PauseImage is the image for the pause container.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `caCertPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-caCertPath}

CACertPath is the path to the SSL certificate authority used to
secure communications between node and control-plane.
Defaults to "/etc/kubernetes/pki/ca.crt".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `skipPhases` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-skipPhases}

SkipPhases is a list of phases to skip during command execution.
The list of phases can be obtained with the "kubeadm join --help" command.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `nodeRegistration` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration}

NodeRegistration holds configuration for the node registration similar to the kubeadm node registration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `criSocket` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-criSocket}

CRI socket is the socket for the CRI.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `kubeletExtraArgs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-kubeletExtraArgs}

KubeletExtraArgs passes through extra arguments to the kubelet. The arguments here are passed to the kubelet command line via the environment file
kubeadm writes at runtime for the kubelet to source. This overrides the generic base-level configuration in the kubelet-config ConfigMap
Flags have higher priority when parsing. These values are local and specific to the node kubeadm is executing on.
An argument name in this list is the flag name as it appears on the command line except without leading dash(es).
Extra arguments will override existing default arguments. Duplicate extra arguments are allowed.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-kubeletExtraArgs-name}

Name is the name of the argument.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-kubeletExtraArgs-value}

Value is the value of the argument.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `taints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-taints}

Taints are additional taints to set for the kubelet.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `ignorePreflightErrors` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-ignorePreflightErrors}

IgnorePreflightErrors provides a slice of pre-flight errors to be ignored when the current node is registered, e.g. 'IsPrivilegedUser,Swap'.
Value 'all' ignores errors from all checks.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#joinNode-nodeRegistration-imagePullPolicy}

ImagePullPolicy specifies the policy for image pulling during kubeadm "init" and "join" operations.
The value of this field must be one of "Always", "IfNotPresent" or "Never".
If this field is unset kubeadm will default it to "IfNotPresent", or pull the required images if not present on the host.

</summary>



</details>


</details>


</details>
